src/yini_test/cases/golden/strict/valid/parser-mode/yini-marker-uppercase.strict.yini
@YINI

^ App
name = "yini-marker-uppercase"
mode = "strict"
enabled = true

/END
