src/yini_test/cases/golden/strict/invalid/parser-mode/yini-marker-after-content.strict.yini
^ App
name = "yini-marker-after-content"
mode = "strict"

@yini

/END
